# termq-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  build-test.sh  compiler-check.sh  makefile  todo
docs/: roadmap-to-release.md
docs/source/world/: world.md
inc/: Actor.h  Cell.h  Coin.h  Enemy.h  Entity.h  Global.h  Item.h  Map.h  MenuWindow.h  Player.h  StatusBar.h  Window.h  menu.h
src/: Actor.h  CMakeLists.txt  Enemy.cpp  Enemy.h  InfoPanel.cpp  InfoPanel.h  Player.cpp  Player.h  Winfo.cpp  Winfo.h  directions.h  game.cpp  game.h  gameover.cpp  gameover.h  main.cpp  menu.cpp  menu.h
src/classes/: Actor.cpp  Actor.h  Coin.cpp  DiagWindow.h  Enemy.cpp  Enemy.h  InfoPanel.cpp  InfoPanel.h  Item.cpp  Item.h  MenuWindow.cpp  MenuWindow.h  Player.cpp  Player.h  Window.cpp  Window.h
src/entities/: Actor.cpp  Actor.h  Coin.cpp  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Item.cpp  Item.h  Player.cpp  Player.h
src/global/: Global.h  difficulty-levels.h
src/spdlog/: tweakme.h
src/test/: CMakeLists.txt  test.cpp
src/windows/: DiagWindow.cpp  MenuWindow.cpp  MenuWindow.h  StatusBar.cpp  StatusBar.h  Window.cpp  Window.h
src/world/: Cell.cpp  Cell.h  Map.cpp  Map.h  World.cpp  World.h
test/: CMakeLists.txt  test.cpp  test_entity.cpp  test_item.cpp  test_vec2ui.cpp
